test/tests/stages/18_structures/invalid_types/scalar_required/and_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  return
  const int(0)
  &&
  identifier(x)
  ;
  }
